--- a/src/app/selection-list/selection-list.component.scss
+++ b/src/app/selection-list/selection-list.component.scss
@@ -1,3 +1,7 @@
+:host {
+  position: relative;
+  display: block;
+}
 .input {
   width: 100%;
   padding: 6px 6px;
@@ -5,4 +9,15 @@
   display: list-item;
   border: 1px solid #ccc;
   border-radius: 4px;
+}
+.placeholder {
+  font-weight: normal;
+  color: gray;
+  font-size: 14px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 7px;
+  pointer-events: none;
 }
