--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,7 @@
 <app-nav-bar></app-nav-bar>
 
 <div class="input_data">
-  <!-- Materials -->
   <app-panel title="Materials">
-    <!-- Concrete -->
     <label class="input_label"
       >Concrete
       <div class="info">
@@ -29,7 +27,7 @@
         placeholder="fc"
       />
     </ng-container>
-    <!-- Stell -->
+
     <label class="input_label">Steel</label>
     <select
       class="input_select"
@@ -52,7 +50,7 @@
       />
     </ng-container>
   </app-panel>
-  <!-- Support Area -->
+
   <app-panel title="Support Area">
     <label class="input_label">Section Type</label>
     <select
@@ -92,7 +90,7 @@
         placeholder="D"
       />
     </ng-container>
-    <!-- POSITION -->
+
     <label class="input_label">Position</label>
     <select
       class="input_select"
@@ -162,7 +160,7 @@
       </ng-container>
     </ng-container>
   </app-panel>
-  <!-- Slab Element-->
+
   <app-panel title="Slab Element">
     <label class="input_label">Elemtn Types</label>
     <select
@@ -288,4 +286,4 @@
           </div>
           <button (click)="sayHello()">content: '\2807'</button> -->
 <!-- <input class=doubleInput placeholder="dbLx">
-                <input class="doubleInput" placeholder="dbLy"> -->
+                <input class="doubleInput" placeholder="dbLy"--->
