--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -18,7 +18,6 @@
 }
 .dropdown {
   float: left;
-  overflow: hidden;
 }
 .dropdown .dropbtn {
   font-size: 16px;
@@ -27,8 +26,9 @@
   color: white;
   padding: 14px 16px;
   background-color: inherit;
-  font-family: inherit;
   margin: 0;
+  position: relative;
+  overflow: visible;
 }
 .navbar a:hover,
 .dropdown:hover .dropbtn {
