--- a/src/app/panel/panel.component.scss
+++ b/src/app/panel/panel.component.scss
@@ -2,20 +2,21 @@
   display: block;
   overflow: hidden;
 }
+.panel {
+  font-size: 18px;
+}
+.title {
+  display: inline-block;
+  padding-left: 5px;
+}
+
 .panel-header {
   cursor: pointer;
-  font-size: 20px;
-  font-weight: bold;
-  color: #444;
-  background-color: #cccccc;
-  padding: 15px;
+  float: right;
+  padding-right: 5px;
 
   &:after {
-    font-size: 20px;
     content: "\002B";
-    color: #777;
-    font-weight: bold;
-    float: right;
     transition: 1s;
   }
   &.open:after {
@@ -24,5 +25,6 @@
   }
 }
 .panel-content {
-  padding: 5px 20px;
+  display: block;
+  padding: 10px;
 }
