--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,6 +1,12 @@
 <app-nav-bar></app-nav-bar>
 <div class="test">
-  <app-side-bar></app-side-bar>
+  <app-side-bar title="Reinforced Concrete">
+    <app-side-bar-panel>
+      <div>Flexural design of RC malakas</div>
+      <div>Flexural design of RC malakas2</div>
+    </app-side-bar-panel>
+    <!-- <label>Flexural design of RC malakas</label> -->
+  </app-side-bar>
   <div class="main">
     <div class="title">Elastic beam column</div>
     <div class="constructor">
@@ -71,6 +77,7 @@
             />
           </ng-container>
         </app-panel>
+        <app-section-beam></app-section-beam>
         <app-panel title="Forces">
           <label class="input_label">Bending Moment </label>
           <input
