--- a/src/app/side-bar/side-bar.component.scss
+++ b/src/app/side-bar/side-bar.component.scss
@@ -1,86 +1,95 @@
-.logo {
-  height: 150px;
-  width: 300px;
-  background-color: #297fb9d8;
-}
-.contents {
-  background-color: rgb(78, 73, 73);
-  color: #b1d1e6d8;
-  text-shadow: black;
-  font-weight: bold;
-  font-size: 20px;
-  padding: 10px 0px 0px 10px;
-}
-.nav-bar {
-  height: 100%;
-  width: 300px;
-  background-color: rgb(78, 73, 73);
+:host {
+  background-color: rgb(81, 81, 83);
   color: white;
 }
 .search {
-  background-color: white;
-  width: 80%;
-  padding: 5px 0px 5px 8px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  float: none;
-  position: relative;
-  top: 80%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  &:focus {
-    outline: none;
+  height: 140px;
+  width: 300px;
+  background-color: #3a789e;
+  .search-input {
+    background-color: white;
+    width: 250px;
+    padding: 5px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    position: absolute;
+    top: 18%;
+    left: 20px;
+    &:focus {
+      outline: none;
+    }
   }
+}
+.contents {
+  cursor: pointer;
+  width: 250px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 20px;
+  padding: 10px 0px 0px 5px;
+  margin-bottom: 5px;
+  position: absolute;
+  top: 10%;
+  left: 15px;
+  &:hover {
+    color: white;
+  }
+}
+.title {
+  width: fit-content;
+  color: #c6d7e2;
+  text-shadow: 2px 2px #212629;
+  font-weight: bold;
+  font-size: 20px;
+  padding: 10px 0px 15px 5px;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .panel.panel::ng-deep .panel-header {
-  font-size: 15px;
-  font-weight: normal;
-  color: white;
-  background-color: rgb(78, 73, 73);
-  padding-bottom: 8px;
   &:after {
-    font-size: 20px;
-    content: "\22EE";
-    padding-right: 5px;
-    font-size: 15px;
-    color: white;
-    font-weight: bold;
-    float: right;
+    content: "\2630";
     transition: 1s;
   }
-  &.open:after {
-    content: "\22EE";
-    transition: 1s;
-    font-size: 15px;
+  &:hover {
+    color: rgb(206, 198, 198);
   }
+}
+.test {
+  padding: 10px 10px 0px 10px;
+  cursor: pointer;
+  display: block;
+  font-size: 16px;
+  margin-bottom: 10px;
   &:hover {
     color: rgb(206, 198, 198);
   }
 }
 
-.panel.panel::ng-deep .panel-content {
-  background-color: rgb(90, 89, 89);
-  display: block;
-  font-size: 15px;
-}
-.input_label {
-  //   padding-bottom: 10px;
-  padding: 5px;
-  width: 100%;
-  height: 20px;
-  color: white;
+// .panel.test::ng-deep .panel-content {
+//   padding: 10px 10px 0px 10px;
+//   .panel-label {
+//     width: fit-content;
+//     cursor: pointer;
+//     display: block;
+//     font-size: 16px;
+//     margin-bottom: 10px;
+//     &:hover {
+//       color: rgb(206, 198, 198);
+//     }
+//   }
+// }
+
+.panel.panel::ng-deep .title {
   cursor: pointer;
+  font-size: 18px;
   &:hover {
     color: rgb(206, 198, 198);
-    cursor: pointer;
   }
-}
-label {
-  cursor: pointer;
-  display: block;
 }
 
 app-panel {
   border-bottom: 1px solid rgb(46, 45, 45);
+  margin-bottom: 5px;
+  padding: 5px 0px;
 }
