--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -12,7 +12,7 @@
     <div class="constructor">
       <div class="input_data">
         <label>Input data </label>
-        <app-panel title="Materials">
+        <app-panel title="Materials" fontSize="24px" iconExpanded="apps">
           <label class="input_label">Concrete </label>
           <app-concrete-select [(value)]="params.concrete">
           </app-concrete-select>
