--- a/src/app/panel/panel.component.scss
+++ b/src/app/panel/panel.component.scss
@@ -2,26 +2,16 @@
   display: block;
   overflow: hidden;
 }
-.panel {
-  font-size: 18px;
-}
 .title {
   display: inline-block;
   padding-left: 5px;
 }
-
 .panel-header {
   cursor: pointer;
-  float: right;
   padding-right: 5px;
 
-  &:after {
-    content: "\002B";
-    transition: 1s;
-  }
-  &.open:after {
-    content: "\2212";
-    transition: 1s;
+  .toggle-icon {
+    float: right;
   }
 }
 .panel-content {
