--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -2,8 +2,10 @@
 <div class="test">
   <app-side-bar title="Reinforced Concrete">
     <app-side-bar-panel>
-      <div>Flexural design of RC malakas</div>
-      <div>Flexural design of RC malakas2</div>
+      <label class="panel-label">Flexural design of RC Column </label>
+      <label class="panel-label" [routerLink]="'/search'"
+        >Confining Reinforcement</label
+      >
     </app-side-bar-panel>
     <!-- <label>Flexural design of RC malakas</label> -->
   </app-side-bar>
