--- a/src/app/side-bar-panel/side-bar-panel.component.html
+++ b/src/app/side-bar-panel/side-bar-panel.component.html
@@ -5,10 +5,7 @@
   fontSize="15px"
   iconCollapsed="apps"
 >
-  <label class="panel-label">Flexural design of RC Column </label>
-  <label class="panel-label" [routerLink]="'/search'"
-    >Confining Reinforcement</label
-  >
+  <ng-content></ng-content>
 </app-panel>
 <!-- <div>
   <app-panel class="panel" [state]="'open'" title="Test"> </app-panel>
