--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -3,7 +3,10 @@
   <app-side-bar title="Reinforced Concrete">
     <app-side-bar-panel>
       <label class="panel-label">Flexural design of RC Column </label>
-      <label class="panel-label" [routerLink]="'/search'"
+      <label
+        class="panel-label"
+        [routerLink]="'/search'"
+        [routerLinkActive]="'active'"
         >Confining Reinforcement</label
       >
     </app-side-bar-panel>
