--- a/src/app/side-bar/side-bar.component.scss
+++ b/src/app/side-bar/side-bar.component.scss
@@ -6,6 +6,7 @@
   height: 140px;
   width: 300px;
   background-color: #3a789e;
+  position: relative;
   .search-input {
     background-color: white;
     width: 250px;
@@ -13,7 +14,7 @@
     border: 1px solid #ddd;
     border-radius: 5px;
     position: absolute;
-    top: 18%;
+    top: 85%;
     left: 20px;
     &:focus {
       outline: none;
