--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -4,7 +4,7 @@
       <label class="panel-label">Flexural design of RC Column </label>
       <label
         class="panel-label"
-        [routerLink]="'/search'"
+        [routerLink]="'/home'"
         [routerLinkActive]="'active'"
         >Confining Reinforcement</label
       >
