--- a/src/app/side-bar-panel/side-bar-panel.component.html
+++ b/src/app/side-bar-panel/side-bar-panel.component.html
@@ -1,14 +1,10 @@
 <app-panel
-  [state]="'closed'"
+  [state]="'open'"
   title="Section Design"
   class="panel"
-  fontSize="15px"
+  fontSize="18px"
   iconCollapsed="apps"
   [titleLink]="'/home'"
 >
   <ng-content></ng-content>
 </app-panel>
-<!-- <div>
-  <app-panel class="panel" [state]="'open'" title="Test"> </app-panel>
-  <div class="panel-content"><ng-content></ng-content></div>
-</div> -->
