--- a/src/app/side-bar-panel/side-bar-panel.component.scss
+++ b/src/app/side-bar-panel/side-bar-panel.component.scss
@@ -1,26 +1,27 @@
 :host {
   display: block;
 }
-.panel.panel::ng-deep .panel-content {
-  padding: 10px 10px 0px 10px;
-  .panel-label {
-    width: fit-content;
-    cursor: pointer;
-    display: block;
-    font-size: 16px;
-    margin-bottom: 10px;
-    &:hover {
-      color: rgb(206, 198, 198);
-    }
-  }
-}
-.panel.panel::ng-deep .title {
-  cursor: pointer;
-  font-size: 18px;
-  &:hover {
-    color: rgb(206, 198, 198);
-  }
-}
+// .panel.panel::ng-deep .panel-content {
+//   padding: 10px 10px 0px 10px;
+//   .panel-label {
+//     width: fit-content;
+//     cursor: pointer;
+//     display: block;
+//     font-size: 16px;
+//     margin-bottom: 10px;
+// &:hover {
+//   color: rgb(206, 198, 198);
+// }
+//   }
+// }
+// .panel.panel::ng-deep .title {
+//   cursor: pointer;
+//   font-size: 18px;
+//   &:hover {
+//     color: rgb(206, 198, 198);
+//   }
+// }
+
 app-panel {
   border-bottom: 1px solid rgb(46, 45, 45);
   margin-bottom: 5px;
