--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,14 +1,17 @@
 <a [routerLink]="'/home'"><i class="fa fa-fw fa-home"></i> Home </a>
 <a [routerLink]="'/search'"><i class="fa fa-search"></i> Search</a>
-<div class="dropdown">
-  <button class="dropbtn">Dropdown <i class="fa fa-caret-down"></i></button>
-  <div class="dropdown-content">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-  </div>
-</div>
+
 <div class="topnav-right">
-  <a [routerLink]="'/search'">Search</a>
+  <div class="dropdown">
+    <button class="dropbtn">
+      Applications <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Statics</a>
+      <a [routerLink]="'/structural'">Structural</a>
+      <a href="#">Reliability</a>
+    </div>
+  </div>
+  <!-- <a [routerLink]="'/search'">Search</a> -->
   <a href="#about">About</a>
 </div>
