--- a/src/app/panel/panel.component.scss
+++ b/src/app/panel/panel.component.scss
@@ -6,6 +6,7 @@
   display: inline-block;
   cursor: pointer;
   padding-left: 5px;
+  padding-bottom: 5px;
 }
 .panel-header {
   padding-right: 5px;
@@ -17,5 +18,5 @@
 }
 .panel-content {
   display: block;
-  padding: 10px;
+  padding: 5px 5px 5px 10px;
 }
