--- a/src/app/side-bar-panel/side-bar-panel.component.scss
+++ b/src/app/side-bar-panel/side-bar-panel.component.scss
@@ -22,8 +22,9 @@
 //   }
 // }
 
-app-panel {
+.panel {
   border-bottom: 1px solid rgb(46, 45, 45);
   margin-bottom: 5px;
   padding: 5px 0px;
+  color: red;
 }
