--- a/src/app/side-bar/side-bar.component.scss
+++ b/src/app/side-bar/side-bar.component.scss
@@ -1,6 +1,7 @@
 :host {
   background-color: rgb(81, 81, 83);
   color: white;
+  display: block;
 }
 .search {
   height: 140px;
@@ -42,7 +43,20 @@
   text-shadow: 2px 2px #212629;
   font-weight: bold;
   font-size: 20px;
-  padding: 10px 0px 15px 5px;
+  padding: 10px 0px 10px 5px;
   text-decoration: none;
   cursor: pointer;
+}
+app-panel {
+  border-bottom: 1px solid black;
+  padding-top: 8px;
+}
+.panel-item {
+  width: fit-content;
+  padding: 5px 0px 5px 10px;
+  font-size: 16px;
+  cursor: pointer;
+  &:hover {
+    color: #b8d7eb;
+  }
 }
