--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
 
 <div class="topnav-right">
   <div class="dropdown">
-    <button class="dropbtn">
+    <button class="dropbtn" [routerLink]="'/application'">
       Applications <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
