--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -2,7 +2,7 @@
   background-color: #333333;
   width: 100%;
   text-align: center;
-  position: relative;
+  position: fixed;
   display: block;
   overflow: visible;
   height: 47px;
