--- a/src/app/reinforced-concrete/reinforced-concrete.component.html
+++ b/src/app/reinforced-concrete/reinforced-concrete.component.html
@@ -3,12 +3,7 @@
     title="Reinforced Concrete"
     [panels]="sidebarPanels"
   ></app-side-bar>
-  <app-container-page
-    [title]="title"
-    [breadcrumb]="breadcrumb"
-    [items]="items"
-    padding="0px"
-    image="../../assets/Structural.png"
-  >
-  </app-container-page>
+  <div class="test2">
+    <router-outlet></router-outlet>
+  </div>
 </div>
