--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -8,7 +8,7 @@
     <!-- <div class="title">Elastic beam column</div>
     <div class="constructor">
       <div class="input_data">
-        <label>Input data </label>
+        <label>Input data </label>``
         <app-panel title="Materials" fontSize="24px" iconExpanded="apps">
           <label class="input_label">Concrete </label>
           <app-concrete-select [(value)]="params.concrete">
